<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".presentation.view.LoginFragment">

        <ImageView
            android:id="@+id/ivAppLogo"
            android:layout_width="@dimen/_75dp"
            android:layout_height="@dimen/_75dp"
            android:background="@drawable/mangadex_logo"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.2" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/_username"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/edAccount"
            app:layout_constraintStart_toStartOf="@+id/edPassword"
            app:layout_constraintTop_toBottomOf="@+id/ivAppLogo"
            app:layout_constraintVertical_bias="0.9" />

        <EditText
            android:id="@+id/edAccount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_75dp"
            android:backgroundTint="@color/orange"
            android:singleLine="true"
            app:layout_constraintBottom_toTopOf="@+id/edPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ivAppLogo"
            app:layout_constraintVertical_bias="0.5" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_password"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/edPassword"
            app:layout_constraintStart_toStartOf="@+id/edPassword"
            app:layout_constraintTop_toBottomOf="@+id/edAccount"
            app:layout_constraintVertical_bias="0.9" />

        <EditText
            android:id="@+id/edPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_75dp"
            android:backgroundTint="@color/orange"
            android:singleLine="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.327"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ivAppLogo"
            app:layout_constraintVertical_bias="0.5" />

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/orange"
            android:text="@string/_login"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edPassword" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
