<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".presentation.view.HomeFragment">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/ivAppLogo"
            android:layout_width="@dimen/_75dp"
            android:layout_height="@dimen/_75dp"
            android:background="@drawable/mangadex_logo"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.05" />

        <TextView
            android:id="@+id/tvAppTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_title"
            android:textSize="32sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/ivAppLogo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.2"
            app:layout_constraintStart_toEndOf="@+id/ivAppLogo"
            app:layout_constraintTop_toTopOf="@+id/ivAppLogo" />

        <TextView
            android:id="@+id/tvTitleRandom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_random"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ivAppLogo"
            app:layout_constraintVertical_bias="0.05" />

        <Button
            android:id="@+id/btnRandom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/orange"
            android:text="@string/_reroll"
            app:layout_constraintBottom_toBottomOf="@+id/tvTitleRandom"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.8"
            app:layout_constraintStart_toEndOf="@+id/tvTitleRandom"
            app:layout_constraintTop_toTopOf="@+id/tvTitleRandom" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingHorizontal="@dimen/_4dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btnRandom">

            <ImageView
                android:id="@+id/ivCover"
                android:layout_width="150dp"
                android:layout_height="200dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:background="@drawable/sample_cover" />

            <TextView
                android:id="@+id/tvTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_4dp"
                android:singleLine="true"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/ivCover"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="Sousou Frieren" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvcGenres"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_4dp"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/ivCover"
                app:layout_constraintTop_toBottomOf="@+id/tvTitle"
                tools:listitem="@layout/item_genres" />

            <TextView
                android:id="@+id/tvDescriptions"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginHorizontal="@dimen/_4dp"
                android:ellipsize="end"
                android:maxLines="8"
                android:textAlignment="textStart"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/ivCover"
                app:layout_constraintTop_toBottomOf="@+id/rvcGenres"
                tools:text="The Blessing of Heaven, A Prodigal Genius, Edenberg Dog.To win the love of her adopted parents, Elena dedicated her skills to the Edenberg name. If anything posed to harm the family, Elena would even kill the people she loved. In the end, Elena\u2019s \u201cfamily\u201d chose to sacrifice her. No longer having the will to live, Elena\u2019s dying wish was to destroy the Edenberg family name. Time reset and Elena now has a chance to do just that with the help of the mysterious Emperor who heard her wish.  \n  \n\u2014\u2014\u2014\u2014\u2014\u2014\u2014\u2014\u2014\u2014\u2014\u2014  \n  \nA family not connected by blood but with ink. I do not desire these abilities of mine. I only want love from them however, they cruelly used everything I had and abandoned me at the end.  \n  \nI was offered as a sacrifice.  \n\u201cThose eyes.\u201d  \nBefore death approached after I was sacrificed, I met him.  \n\u201cYou have no will to live.\u201d  \nHe breathed in the scent from my neck as if it was the most fragrant thing.  \n\u201cYour last wishes, child.\u201d  \n  \nThose were the last words I heard in this life. I thought that moment was extremely awful. If only I was allowed to live one more time. Then. This time I will throw you people away first. Like a miracle, I returned to the past" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
